--- a/force-app/main/default/pages/aspe_NewWorkflowSchedule.page
+++ b/force-app/main/default/pages/aspe_NewWorkflowSchedule.page
@@ -69,7 +69,7 @@
         }
     </script>
 
-   	<apex:sectionHeader title="Workflow Scheduler" subtitle="New Workflow Schedule" />
+   	<apex:sectionHeader title="Workflow Scheduler" subtitle="{!action} Workflow Schedule" />
     <apex:pageBlock title="Schedule Details" mode="edit">
         <apex:form id="myform" styleClass="myForm">
             <apex:pageMessages ></apex:pageMessages>
@@ -292,6 +292,7 @@
                                     </td>
                                     <td class="dataCol" colspan="2">
                                         <apex:inputField id="isActive" value="{!workflowSchedule.Active__c}" />
+                                        <apex:outputText value="{!isScheduled}" style="margin-left: 25px; color: #616161; font-size: 11px; font-weight: bold;"></apex:outputText>
                                     </td>
                                 </tr>
                                 <tr>
@@ -300,7 +301,7 @@
                                 <tr>
                                     <td></td>
                                     <td>
-                                        <apex:commandButton action="{!save}" value="Save Trigger" id="saveButton"/>
+                                        <apex:commandButton action="{!save}" value="Save Schedule" id="saveButton"/>
                                     </td>
                                 </tr>
                             </table>
